[fix] #117 adds spacing after sentences in review text.

--- a/frontend/src/app/components/UserTextView/UserTextView.scss
+++ b/frontend/src/app/components/UserTextView/UserTextView.scss
@@ -1,4 +1,8 @@
 .user-text {
+  span { // fix for #117 - sentence spacing
+    padding-inline-end: 0.5em;
+  }
+
   .highlight {
     span[data-topic] {
       color: var(--bs-blue);
